{
    "name": "UniversalBasicInputActions",
    "maps": [
        {
            "name": "BasicTouch",
            "id": "12e0c325-73f0-4022-b6f7-2bd8b13131ed",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "66c4d4e2-e274-4851-807d-be23878a549f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryInteract",
                    "type": "Button",
                    "id": "c495e3a4-d7f5-4eb9-8dec-bf829e92521e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryInteract",
                    "type": "Button",
                    "id": "51b8c1dc-072f-424f-835a-a982c9f9aae2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "77f11e72-f444-4709-b0ad-e56f14709ea7",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35f2c391-c0d1-4c45-bab2-4875114141a0",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f10d4994-f38f-4757-ba3f-295be4277c4d",
                    "path": "<Touchscreen>/touch0/tap",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BasicMouse",
            "id": "86a81fb4-7e51-40a1-9736-4f9f7fd594f7",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "3987ca8c-518a-43af-a9c5-3176598ad9fa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryInteract",
                    "type": "Button",
                    "id": "7e85f91d-7b4d-4f7c-bbc3-e6bc15a13a02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryInteract",
                    "type": "Button",
                    "id": "f314b1e0-3bbd-4b73-9593-1853daee872c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5b776e15-1321-4377-a401-dd28f43aec91",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "971bb2c7-4833-436f-b730-26c53679b4be",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d4f7ea2-5c9a-4a49-955a-57a800ddcb4d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BasicController",
            "id": "6deaf78a-ea81-4ed5-924a-66cfe7250db0",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "e63117e1-bd0a-4d87-88e2-27bbfa4bedad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryInteract",
                    "type": "Button",
                    "id": "1665ccef-c3a1-4cbe-94e4-5746419c8c10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryInteract",
                    "type": "Button",
                    "id": "a4176dfe-c715-48d2-859a-0473eb0b7433",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dec2fc1e-327f-4c12-b45d-32df3cad292e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57d96589-b37c-493c-a78b-9ceba6aee52e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "379e130b-5e20-47cb-b019-197314e86673",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}